# bot-template

./: pyproject.toml  run.py
.github/workflows/: main.yml
bot_template/core/: __init__.py  app.py  app_config.py  telegram_bot.py
dev/notebooks/: dev_10_Oct_2023.ipynb
tests/: test_app.py  test_bot.py
